--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp135f-dk-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp135f-dk-mx.dts
@@ -1,6 +1,6 @@
-/* SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause) */
+// SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) STMicroelectronics 2022 - All Rights Reserved
+ * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -15,14 +15,15 @@
 
 #include "stm32mp135.dtsi"
 #include "stm32mp13xf.dtsi"
+#include "stm32mp13-pinctrl.dtsi"
 #include "stm32mp13-ddr.dtsi"
 
 /* USER CODE BEGIN includes */
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP135F-DK STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
-	compatible = "st,stm32mp135f-dk-mx", "st,stm32mp135";
+	model = "STMicroelectronics STM32MP135F-DK STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mp1-v23.06.21";
+	compatible = "st,stm32mp135f-dk-mx", "st,stm32mp135f-dk", "st,stm32mp135";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -262,12 +263,12 @@
 	/* USER CODE END i2c4 */
 };
 
-&iwdg2{
+&iwdg1{
 	status = "okay";
 
-	/* USER CODE BEGIN iwdg2 */
+	/* USER CODE BEGIN iwdg1 */
 	timeout-sec = <32>;
-	/* USER CODE END iwdg2 */
+	/* USER CODE END iwdg1 */
 };
 
 &pka{
@@ -296,28 +297,13 @@
 		CLK_MPU_PLL1P
 		CLK_AXI_PLL2P
 		CLK_MLAHBS_PLL3
-		CLK_RTC_LSE
-		CLK_MCO1_HSE
-		CLK_MCO2_DISABLED
 		CLK_CKPER_HSE
-		CLK_ETH1_PLL4P
-		CLK_ETH2_PLL4P
 		CLK_SDMMC1_PLL4P
-		CLK_SDMMC2_PLL4P
 		CLK_STGEN_HSE
-		CLK_USBPHY_HSE
 		CLK_I2C4_HSI
-		CLK_USBO_USBPHY
-		CLK_ADC1_CKPER
-		CLK_ADC2_CKPER
-		CLK_I2C12_HSI
-		CLK_I2C5_HSI
-		CLK_UART2_HSI
 		CLK_UART4_HSI
 		CLK_RNG1_PLL4R
 		CLK_SAES_AXI
-		CLK_DCMIPP_PLL2Q
-		CLK_LPTIM3_PCLK3
 	>;
 	st,clkdiv = <
 		DIV(DIV_MPU, 1)
@@ -329,9 +315,6 @@
 		DIV(DIV_APB4, 1)
 		DIV(DIV_APB5, 2)
 		DIV(DIV_APB6, 1)
-		DIV(DIV_RTC, 0)
-		DIV(DIV_MCO1, 0)
-		DIV(DIV_MCO2, 0)
 	>;
 	st,pll_vco {
 		pll1_vco_1300Mhz: pll1-vco-1300Mhz {
@@ -353,7 +336,6 @@
 			src = < CLK_PLL4_HSE >;
 			divmn = < 1 49 >;
 		};
-
 		/* USER CODE BEGIN rcc_st-pll_vco */
 		/* USER CODE END rcc_st-pll_vco */
 	};
@@ -414,46 +396,6 @@
 		/* USER CODE END pll4 */
 	};
 
-	st,clk_opp {
-		/* CK_MPU clock config for MP13 */
-		st,ck_mpu {
-
-			cfg_1 {
-				hz = < 650000000 >;
-				st,clksrc = < CLK_MPU_PLL1P >;
-				st,pll = < &pll1_cfg1 >;
-			};
-			/* USER CODE BEGIN rcc_st-ck_mpu */
-			/* USER CODE END rcc_st-ck_mpu */
-		};
-
-		/* CK_AXI clock config for MP13 */
-		st,ck_axi {
-
-			cfg_1 {
-				hz = < 266500000 >;
-				st,clksrc = < CLK_AXI_PLL2P >;
-				st,clkdiv = < DIV(DIV_AXI, 0) >;
-				st,pll = < &pll2_cfg1 >;
-			};
-			/* USER CODE BEGIN rcc_st-ck_axi */
-			/* USER CODE END rcc_st-ck_axi */
-		};
-
-		/* CK_MLAHBS clock config for MP13 */
-		st,ck_mlahbs {
-
-			cfg_1 {
-				hz = < 208877929 >;
-				st,clksrc = < CLK_MLAHBS_PLL3 >;
-				st,clkdiv = < DIV(DIV_MLAHB, 0) >;
-				st,pll = < &pll3_cfg1 >;
-			};
-
-			/* USER CODE BEGIN rcc_st-ck_mlahbs */
-			/* USER CODE END rcc_st-ck_mlahbs */
-		};
-	};
 };
 
 &rng{
