--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx-u-boot.dtsi
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx-u-boot.dtsi
@@ -1,6 +1,6 @@
-/* SPDX-License-Identifier: GPL-2.0+ OR BSD-3-Clause*/
+// SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2022, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -8,9 +8,8 @@
  * https://wiki.st.com/stm32mpu/wiki/Category:Device_tree_configuration
  */
 
-#include "stm32mp13-u-boot.dtsi"
-
 /* USER CODE BEGIN includes */
+#include "stm32mp13-u-boot.dtsi"
 /* USER CODE END includes */
 
 / {
@@ -19,7 +18,6 @@
 
 	aliases{
 		mmc0 = &sdmmc1;
-		usb0 = &usbotg_hs;
 	};
 
 	config{
@@ -44,30 +42,6 @@
 }; /*root*/
 
 /* USER CODE BEGIN addons */
-
-&panel_rgb{
-	compatible = "rocktech,rk043fn48h", "simple-panel";
-
-	display-timings{
-
-		timing@0{
-			clock-frequency = <10000000>;
-			hactive = <480>;
-			vactive = <272>;
-			hfront-porch = <10>;
-			hback-porch = <10>;
-			hsync-len = <52>;
-			vfront-porch = <10>;
-			vback-porch = <10>;
-			vsync-len = <10>;
-			hsync-active = <0>;
-			vsync-active = <0>;
-			de-active = <1>;
-			pixelclk-active = <1>;
-		};
-	};
-};
-
 &uart4{
 	u-boot,dm-pre-reloc;
 };
