--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157a-dk1-mx-u-boot.dtsi
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157a-dk1-mx-u-boot.dtsi
@@ -1,6 +1,6 @@
-/* SPDX-License-Identifier: GPL-2.0+ OR BSD-3-Clause*/
+// SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2022, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -8,10 +8,8 @@
  * https://wiki.st.com/stm32mpu/wiki/Category:Device_tree_configuration
  */
 
-#include "stm32mp15-u-boot.dtsi"
-
 /* USER CODE BEGIN includes */
-#include <dt-bindings/clock/stm32mp1-clksrc.h>
+#include "stm32mp15-scmi-u-boot.dtsi"
 /* USER CODE END includes */
 
 / {
@@ -32,21 +30,6 @@
 		st,stm32prog-gpios = <&gpioa 14 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
 	};
 
-#if defined(CONFIG_STM32MP15x_STM32IMAGE) || defined(CONFIG_SPL)
-
-	config{
-		u-boot,mmc-env-partition = "ssbl";
-	};
-#endif
-
-	reserved-memory{
-		u-boot,dm-spl;
-
-		optee@de000000{
-			u-boot,dm-spl;
-		};
-	};
-
 	led{
 
 		led-red{
@@ -64,6 +47,10 @@
 
 &uart4{
 	u-boot,dm-pre-reloc;
+};
+
+&usbotg_hs{
+	u-boot,force-b-session-valid;
 };
 
 &uart4_pins_mx {
