--- a/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157c-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157c-dk2-mx.dts
@@ -1,6 +1,6 @@
-/* SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause) */
+// SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) STMicroelectronics 2022 - All Rights Reserved
+ * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -19,12 +19,13 @@
 /* USER CODE BEGIN includes */
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/mfd/st,stpmic1.h>
+#include "stm32mp157c-dk2-scmi.dtsi"
 #include <dt-bindings/rtc/rtc-stm32.h>
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157C-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
-	compatible = "st,stm32mp157c-dk2", "st,stm32mp157";
+	model = "STMicroelectronics STM32MP157C-DK2 STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mp1-v23.06.21";
+	compatible = "st,stm32mp157c-dk2-mx", "st,stm32mp157c-dk2", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -65,7 +66,7 @@
 			no-map;
 		};
 
-		mcu_rsc_table:mcu_rsc_table@10048000{
+		mcu_rsc_table:mcu-rsc-table@10048000{
 			compatible = "shared-dma-pool";
 			reg = <0x10048000 0x8000>;
 			no-map;
@@ -85,11 +86,6 @@
 
 		gpu_reserved:gpu@d4000000{
 			reg = <0xd4000000 0x4000000>;
-			no-map;
-		};
-
-		optee@de000000{
-			reg = <0xde000000 0x2000000>;
 			no-map;
 		};
 		/* USER CODE END reserved-memory */
@@ -116,7 +112,7 @@
 		};
 	};
 
-	sound:sound{
+	sound{
 		compatible = "audio-graph-card";
 		label = "STM32MP15-DK";
 		routing = "Playback", "MCLK",
@@ -147,7 +143,7 @@
 	};
 	/* USER CODE END root */
 
-	clocks {
+	clocks{
 
 		/* USER CODE BEGIN clocks */
 		/* USER CODE END clocks */
@@ -442,6 +438,16 @@
 		};
 	};
 
+	uart4_idle_pins_mx: uart4_idle_mx-0 {
+		pins1 {
+			pinmux = <STM32_PINMUX('B', 2, AF8)>; /* UART4_RX */
+			bias-disable;
+		};
+		pins2 {
+			pinmux = <STM32_PINMUX('G', 11, ANALOG)>; /* UART4_TX */
+		};
+	};
+
 	uart4_sleep_pins_mx: uart4_sleep_mx-0 {
 		pins {
 			pinmux = <STM32_PINMUX('B', 2, ANALOG)>, /* UART4_RX */
@@ -464,6 +470,23 @@
 		};
 	};
 
+	usart2_idle_pins_mx: usart2_idle_mx-0 {
+		pins1 {
+			pinmux = <STM32_PINMUX('D', 3, ANALOG)>, /* USART2_CTS */
+					 <STM32_PINMUX('D', 5, ANALOG)>; /* USART2_TX */
+		};
+		pins2 {
+			pinmux = <STM32_PINMUX('D', 4, AF7)>; /* USART2_RTS */
+			bias-disable;
+			drive-push-pull;
+			slew-rate = <0>;
+		};
+		pins3 {
+			pinmux = <STM32_PINMUX('D', 6, AF7)>; /* USART2_RX */
+			bias-disable;
+		};
+	};
+
 	usart2_sleep_pins_mx: usart2_sleep_mx-0 {
 		pins {
 			pinmux = <STM32_PINMUX('D', 3, ANALOG)>, /* USART2_CTS */
@@ -474,75 +497,6 @@
 	};
 
 	/* USER CODE BEGIN pinctrl */
-	ltdc_pins_mx: ltdc_mx-0 {
-		pins {
-			pinmux = <STM32_PINMUX('A', 3, AF14)>, /* LTDC_B5 */
-					 <STM32_PINMUX('B', 8, AF14)>, /* LTDC_B6 */
-					 <STM32_PINMUX('C', 0, AF14)>, /* LTDC_R5 */
-					 <STM32_PINMUX('D', 8, AF14)>, /* LTDC_B7 */
-					 <STM32_PINMUX('D', 9, AF14)>, /* LTDC_B0 */
-					 <STM32_PINMUX('D', 10, AF14)>, /* LTDC_B3 */
-					 <STM32_PINMUX('E', 5, AF14)>, /* LTDC_G0 */
-					 <STM32_PINMUX('E', 6, AF14)>, /* LTDC_G1 */
-					 <STM32_PINMUX('E', 15, AF14)>, /* LTDC_R7 */
-					 <STM32_PINMUX('F', 10, AF14)>, /* LTDC_DE */
-					 <STM32_PINMUX('G', 7, AF14)>, /* LTDC_CLK */
-					 <STM32_PINMUX('G', 10, AF14)>, /* LTDC_B2 */
-					 <STM32_PINMUX('G', 12, AF14)>, /* LTDC_B1 */
-					 <STM32_PINMUX('H', 2, AF14)>, /* LTDC_R0 */
-					 <STM32_PINMUX('H', 3, AF14)>, /* LTDC_R1 */
-					 <STM32_PINMUX('H', 8, AF14)>, /* LTDC_R2 */
-					 <STM32_PINMUX('H', 9, AF14)>, /* LTDC_R3 */
-					 <STM32_PINMUX('H', 10, AF14)>, /* LTDC_R4 */
-					 <STM32_PINMUX('H', 12, AF14)>, /* LTDC_R6 */
-					 <STM32_PINMUX('H', 13, AF14)>, /* LTDC_G2 */
-					 <STM32_PINMUX('H', 14, AF14)>, /* LTDC_G3 */
-					 <STM32_PINMUX('H', 15, AF14)>, /* LTDC_G4 */
-					 <STM32_PINMUX('I', 0, AF14)>, /* LTDC_G5 */
-					 <STM32_PINMUX('I', 1, AF14)>, /* LTDC_G6 */
-					 <STM32_PINMUX('I', 2, AF14)>, /* LTDC_G7 */
-					 <STM32_PINMUX('I', 4, AF14)>, /* LTDC_B4 */
-					 <STM32_PINMUX('I', 9, AF14)>, /* LTDC_VSYNC */
-					 <STM32_PINMUX('I', 10, AF14)>; /* LTDC_HSYNC */
-			bias-disable;
-			drive-push-pull;
-			slew-rate = <1>;
-		};
-	};
-
-	ltdc_sleep_pins_mx: ltdc_sleep_mx-0 {
-		pins {
-			pinmux = <STM32_PINMUX('A', 3, ANALOG)>, /* LTDC_B5 */
-					 <STM32_PINMUX('B', 8, ANALOG)>, /* LTDC_B6 */
-					 <STM32_PINMUX('C', 0, ANALOG)>, /* LTDC_R5 */
-					 <STM32_PINMUX('D', 8, ANALOG)>, /* LTDC_B7 */
-					 <STM32_PINMUX('D', 9, ANALOG)>, /* LTDC_B0 */
-					 <STM32_PINMUX('D', 10, ANALOG)>, /* LTDC_B3 */
-					 <STM32_PINMUX('E', 5, ANALOG)>, /* LTDC_G0 */
-					 <STM32_PINMUX('E', 6, ANALOG)>, /* LTDC_G1 */
-					 <STM32_PINMUX('E', 15, ANALOG)>, /* LTDC_R7 */
-					 <STM32_PINMUX('F', 10, ANALOG)>, /* LTDC_DE */
-					 <STM32_PINMUX('G', 7, ANALOG)>, /* LTDC_CLK */
-					 <STM32_PINMUX('G', 10, ANALOG)>, /* LTDC_B2 */
-					 <STM32_PINMUX('G', 12, ANALOG)>, /* LTDC_B1 */
-					 <STM32_PINMUX('H', 2, ANALOG)>, /* LTDC_R0 */
-					 <STM32_PINMUX('H', 3, ANALOG)>, /* LTDC_R1 */
-					 <STM32_PINMUX('H', 8, ANALOG)>, /* LTDC_R2 */
-					 <STM32_PINMUX('H', 9, ANALOG)>, /* LTDC_R3 */
-					 <STM32_PINMUX('H', 10, ANALOG)>, /* LTDC_R4 */
-					 <STM32_PINMUX('H', 12, ANALOG)>, /* LTDC_R6 */
-					 <STM32_PINMUX('H', 13, ANALOG)>, /* LTDC_G2 */
-					 <STM32_PINMUX('H', 14, ANALOG)>, /* LTDC_G3 */
-					 <STM32_PINMUX('H', 15, ANALOG)>, /* LTDC_G4 */
-					 <STM32_PINMUX('I', 0, ANALOG)>, /* LTDC_G5 */
-					 <STM32_PINMUX('I', 1, ANALOG)>, /* LTDC_G6 */
-					 <STM32_PINMUX('I', 2, ANALOG)>, /* LTDC_G7 */
-					 <STM32_PINMUX('I', 4, ANALOG)>, /* LTDC_B4 */
-					 <STM32_PINMUX('I', 9, ANALOG)>, /* LTDC_VSYNC */
-					 <STM32_PINMUX('I', 10, ANALOG)>; /* LTDC_HSYNC */
-		};
-	};
-
 	/* USER CODE END pinctrl */
 };
 
@@ -660,7 +614,6 @@
 	status = "okay";
 
 	/* USER CODE BEGIN dma1 */
-	sram = <&dma_pool>;
 	/* USER CODE END dma1 */
 };
 
@@ -668,7 +621,6 @@
 	status = "okay";
 
 	/* USER CODE BEGIN dma2 */
-	sram = <&dma_pool>;
 	/* USER CODE END dma2 */
 };
 
@@ -686,8 +638,12 @@
 	status = "okay";
 
 	/* USER CODE BEGIN dsi */
+	#address-cells = <1>;
+	#size-cells = <0>;
 
 	ports{
+		#address-cells = <1>;
+		#size-cells = <0>;
 
 		port@0{
 			reg = <0>;
@@ -863,9 +819,9 @@
 		interrupt-controller;
 		touchscreen-size-x = <480>;
 		touchscreen-size-y = <800>;
-		panel = <&panel_otm8009a>;
 		vcc-supply = <&v3v3>;
 		iovcc-supply = <&v3v3>;
+		panel = <&panel_otm8009a>;
 		status = "okay";
 	};
 	/* USER CODE END i2c1 */
@@ -1016,7 +972,7 @@
 				interrupts = <IT_CURLIM_LDO6 0>;
 			};
 
-			vref_ddr:vref_ddr{
+			vref_ddr:vref-ddr{
 				regulator-name = "vref_ddr";
 				regulator-always-on;
 			};
@@ -1026,12 +982,12 @@
 				interrupts = <IT_OCP_BOOST 0>;
 			};
 
-			vbus_otg:pwr_sw1{
+			vbus_otg:pwr-sw1{
 				regulator-name = "vbus_otg";
 				interrupts = <IT_OCP_OTG 0>;
 			};
 
-			vbus_sw:pwr_sw2{
+			vbus_sw:pwr-sw2{
 				regulator-name = "vbus_sw";
 				interrupts = <IT_OCP_SWOUT 0>;
 				regulator-active-discharge = <1>;
@@ -1082,26 +1038,16 @@
 	/* USER CODE END ipcc */
 };
 
-&iwdg2{
-	status = "okay";
-
-	/* USER CODE BEGIN iwdg2 */
-	timeout-sec = <32>;
-	/* USER CODE END iwdg2 */
-};
-
 &ltdc{
 	status = "okay";
 
 	/* USER CODE BEGIN ltdc */
-	pinctrl-names = "default", "sleep";
-	pinctrl-0 = <&ltdc_pins_mx>;
-	pinctrl-1 = <&ltdc_sleep_pins_mx>;
 
 	port{
+		#address-cells = <1>;
+		#size-cells = <0>;
 
-		ltdc_ep0_out:endpoint@0{
-			reg = <0>;
+		ltdc_ep0_out:endpoint{
 			remote-endpoint = <&sii9022_in>;
 		};
 
@@ -1236,6 +1182,9 @@
 	brcmf:bcrmf@1{
 		reg = <1>;
 		compatible = "brcm,bcm4329-fmac";
+		interrupt-parent = <&gpiod>;
+		interrupts = <0 IRQ_TYPE_LEVEL_HIGH>; /* WL_HOST_WAKE */
+		interrupt-names = "host-wake";
 	};
 	/* USER CODE END sdmmc2 */
 };
@@ -1248,9 +1197,10 @@
 };
 
 &uart4{
-	pinctrl-names = "default", "sleep";
+	pinctrl-names = "default", "idle", "sleep";
 	pinctrl-0 = <&uart4_pins_mx>;
-	pinctrl-1 = <&uart4_sleep_pins_mx>;
+	pinctrl-1 = <&uart4_idle_pins_mx>;
+	pinctrl-2 = <&uart4_sleep_pins_mx>;
 	status = "okay";
 
 	/* USER CODE BEGIN uart4 */
@@ -1260,9 +1210,10 @@
 };
 
 &usart2{
-	pinctrl-names = "default", "sleep";
+	pinctrl-names = "default", "idle", "sleep";
 	pinctrl-0 = <&usart2_pins_mx>;
-	pinctrl-1 = <&usart2_sleep_pins_mx>;
+	pinctrl-1 = <&usart2_idle_pins_mx>;
+	pinctrl-2 = <&usart2_sleep_pins_mx>;
 	status = "okay";
 
 	/* USER CODE BEGIN usart2 */
@@ -1283,6 +1234,14 @@
 
 	/* USER CODE BEGIN usbh_ehci */
 	phys = <&usbphyc_port0>;
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	hub@1{
+		compatible = "usb424,2514";
+		reg = <1>;
+		vdd-supply = <&v3v3>;
+	};
 	/* USER CODE END usbh_ehci */
 };
 
@@ -1330,11 +1289,6 @@
 	st,tune-squelch-level = <3>;
 	st,tune-hs-rx-offset = <2>;
 	st,no-lsfs-sc;
-
-	connector{
-		compatible = "usb-a-connector";
-		vbus-supply = <&v3v3>;
-	};
 	/* USER CODE END usbphyc_port0 */
 };
 
@@ -1366,20 +1320,17 @@
 
 /* USER CODE BEGIN addons */
 
+&arm_wdt{
+	timeout-sec = <32>;
+	status = "okay";
+};
+
 &cpu0{
 	cpu-supply = <&vddcore>;
 };
 
 &cpu1{
 	cpu-supply = <&vddcore>;
-};
-
-&sram{
-
-	dma_pool:dma_pool@0{
-		reg = <0x50000 0x10000>;
-		pool;
-	};
 };
 
 &pinctrl{
