--- a/board/stmicroelectronics/stm32mp1/optee-dts/stm32mp135f-dk-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/optee-dts/stm32mp135f-dk-mx.dts
@@ -1,6 +1,6 @@
-/* SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause) */
+// SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) STMicroelectronics 2022 - All Rights Reserved
+ * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -17,17 +17,16 @@
 #include "stm32mp13xf.dtsi"
 
 /* USER CODE BEGIN includes */
-#include <dt-bindings/gpio/gpio.h>
-#include <dt-bindings/gpio/stm32mp_gpio.h>
 #include <dt-bindings/power/stm32mp1-power.h>
-#include <dt-bindings/rtc/rtc-stm32.h>
+#include <dt-bindings/random/stm32mp-rng.h>
+#include <dt-bindings/regulator/st,stm32mp13-regulator.h>
 #include <dt-bindings/soc/stm32mp-tzc400-macro.h>
 #include <dt-bindings/soc/stm32mp13-tzc400.h>
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP135F-DK STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
-	compatible = "st,stm32mp135f-dk", "st,stm32mp135";
+	model = "STMicroelectronics STM32MP135F-DK STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mp1-v23.06.21";
+	compatible = "st,stm32mp135f-dk-mx", "st,stm32mp135f-dk", "st,stm32mp135";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -62,6 +61,12 @@
 		stdout-path = "serial0:115200n8";
 	};
 
+	magic_wol:magic_wol{
+		compatible = "st,stm32mp1,pwr-irq-user";
+		st,wakeup-pin-number = <2>;
+		status = "okay";
+	};
+
 	vin:vin{
 		compatible = "regulator-fixed";
 		regulator-name = "vin";
@@ -76,12 +81,6 @@
 		regulator-min-microvolt = <3300000>;
 		regulator-max-microvolt = <3300000>;
 		regulator-always-on;
-	};
-
-	magic_wol:magic_wol{
-		compatible = "st,stm32mp1,pwr-irq-user";
-		st,wakeup-pin-number = <2>;
-		status = "okay";
 	};
 
 	typec_wakeup:typec_wakeup{
@@ -184,46 +183,46 @@
 
 	/* USER CODE BEGIN pinctrl */
 
-	tamp0_in2_pin_a: tamp0_in2_pin_0 {
-		pins {
-			pinmux = <STM32_PINMUX('A', 6, RSVD)>;
-			st,tamp_id = <2>;
-		};
-	};
-	
-	uart4_pins_a: uart4-0 {
-		pins1 {
-			pinmux = <STM32_PINMUX('D', 6, AF8)>; /* UART4_TX */
-			bias-disable;
-			drive-push-pull;
-			slew-rate = <0>;
-		};
-		pins2 {
-			pinmux = <STM32_PINMUX('D', 8, AF8)>; /* UART4_RX */
-			bias-disable;
-		};
-	};
-	
-	wakeup_pins: wakeup_pins {
-		wakeup_pin_1: pins1 {
-			pinmux = <STM32_PINMUX('F', 8, GPIO)>;
-		};
-		wakeup_pin_2: pins2 {
-			pinmux = <STM32_PINMUX('I', 3, GPIO)>;
-		};
-		wakeup_pin_3: pins3 {
-			pinmux = <STM32_PINMUX('C', 13, GPIO)>;
-		};
-		wakeup_pin_4: pins4 {
-			pinmux = <STM32_PINMUX('I', 1, GPIO)>;
-		};
-		wakeup_pin_5: pins5 {
-			pinmux = <STM32_PINMUX('I', 2, GPIO)>;
-		};
-		wakeup_pin_6: pins6 {
-			pinmux = <STM32_PINMUX('A', 3, GPIO)>;
-		};
-	};
+	  tamp0_in2_pin_a: tamp0_in2_pin_0 {
+	  	pins {
+	  		pinmux = <STM32_PINMUX('A', 6, RSVD)>;
+	  		st,tamp_id = <2>;
+	  	};
+	  };
+	  
+	  uart4_pins_a: uart4-0 {
+	  	pins1 {
+	  		pinmux = <STM32_PINMUX('D', 6, AF8)>; /* UART4_TX */
+	  		bias-disable;
+	  		drive-push-pull;
+	  		slew-rate = <0>;
+	  	};
+	  	pins2 {
+	  		pinmux = <STM32_PINMUX('D', 8, AF8)>; /* UART4_RX */
+	  		bias-disable;
+	  	};
+	  };
+	  
+	  wakeup_pins: wakeup_pins {
+	  	wakeup_pin_1: pins1 {
+	  		pinmux = <STM32_PINMUX('F', 8, GPIO)>;
+	  	};
+	  	wakeup_pin_2: pins2 {
+	  		pinmux = <STM32_PINMUX('I', 3, GPIO)>;
+	  	};
+	  	wakeup_pin_3: pins3 {
+	  		pinmux = <STM32_PINMUX('C', 13, GPIO)>;
+	  	};
+	  	wakeup_pin_4: pins4 {
+	  		pinmux = <STM32_PINMUX('I', 1, GPIO)>;
+	  	};
+	  	wakeup_pin_5: pins5 {
+	  		pinmux = <STM32_PINMUX('I', 2, GPIO)>;
+	  	};
+	  	wakeup_pin_6: pins6 {
+	  		pinmux = <STM32_PINMUX('A', 3, GPIO)>;
+	  	};
+	  };
 	/* USER CODE END pinctrl */
 };
 
@@ -279,6 +278,7 @@
 	DECPROT(STM32MP1_ETZPC_ADC2_ID, DECPROT_S_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_HASH_ID, DECPROT_S_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_I2C4_ID, DECPROT_S_RW, DECPROT_UNLOCK)
+	DECPROT(STM32MP1_ETZPC_IWDG1_ID, DECPROT_S_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_LPTIM3_ID, DECPROT_S_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_PKA_ID, DECPROT_S_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_RNG_ID, DECPROT_S_RW, DECPROT_UNLOCK)
@@ -504,13 +504,12 @@
 	/* USER CODE END i2c4 */
 };
 
-&iwdg2{
+&iwdg1{
 	status = "okay";
 
-	/* USER CODE BEGIN iwdg2 */
+	/* USER CODE BEGIN iwdg1 */
 	timeout-sec = <32>;
-	secure-timeout-sec = <5>;
-	/* USER CODE END iwdg2 */
+	/* USER CODE END iwdg1 */
 };
 
 &lptimer3{
@@ -629,13 +628,12 @@
 			src = < CLK_PLL4_HSE >;
 			divmn = < 1 49 >;
 		};
-
 		/* USER CODE BEGIN rcc_st-pll_vco */
 
 		pll1_vco_2000Mhz:pll1-vco-2000Mhz{
-			src = < CLK_PLL12_HSE >;
-			divmn = < 1 82 >;
-			frac = < 0xAAA >;
+			src = <CLK_PLL12_HSE>;
+			divmn = <1 82>;
+			frac = <0xAAA>;
 		};
 		/* USER CODE END rcc_st-pll_vco */
 	};
@@ -653,8 +651,8 @@
 		/* USER CODE BEGIN pll1 */
 
 		pll1_cfg2:pll1_cfg2{
-			st,pll_vco = < &pll1_vco_2000Mhz >;
-			st,pll_div_pqr = < 0 1 1 >;
+			st,pll_vco = <&pll1_vco_2000Mhz>;
+			st,pll_div_pqr = <0 1 1>;
 		};
 		/* USER CODE END pll1 */
 	};
@@ -754,6 +752,7 @@
 
 	/* USER CODE BEGIN rng */
 	clock-error-detect;
+	st,rng-config = <RNG_CONFIG_NIST_B_ID>;
 	/* USER CODE END rng */
 };
 
@@ -816,10 +815,6 @@
 	st,protreg = < (TZPROT(15)) >;
 };
 
-&gpiof{
-	st,protreg = < (TZPROT(8)) >;
-};
-
 &gpioi{
 	st,protreg = < (TZPROT(2)|TZPROT(3)) >;
 };
@@ -852,43 +847,43 @@
 &scmi_regu{
 
 	scmi_vddcpu:voltd-vddcpu{
-		voltd-name = "vddcpu";
-		regulator-name = "vddcpu";
+		reg = <VOLTD_SCMI_STPMIC1_BUCK1>;
+		voltd-supply = <&vddcpu>;
 	};
 
 	scmi_vdd:voltd-vdd{
-		voltd-name = "vdd";
-		regulator-name = "vdd";
+		reg = <VOLTD_SCMI_STPMIC1_BUCK3>;
+		voltd-supply = <&vdd>;
 	};
 
 	scmi_vddcore:voltd-vddcore{
-		voltd-name = "vddcore";
-		regulator-name = "vddcore";
+		reg = <VOLTD_SCMI_STPMIC1_BUCK4>;
+		voltd-supply = <&vddcore>;
 	};
 
 	scmi_vdd_adc:voltd-vdd_adc{
-		voltd-name = "vdd_adc";
-		regulator-name = "vdd_adc";
+		reg = <VOLTD_SCMI_STPMIC1_LDO1>;
+		voltd-supply = <&vdd_adc>;
 	};
 
 	scmi_vdd_usb:voltd-vdd_usb{
-		voltd-name = "vdd_usb";
-		regulator-name = "vdd_usb";
+		reg = <VOLTD_SCMI_STPMIC1_LDO4>;
+		voltd-supply = <&vdd_usb>;
 	};
 
 	scmi_vdd_sd:voltd-vdd_sd{
-		voltd-name = "vdd_sd";
-		regulator-name = "vdd_sd";
+		reg = <VOLTD_SCMI_STPMIC1_LDO5>;
+		voltd-supply = <&vdd_sd>;
 	};
 
 	scmi_v1v8_periph:voltd-v1v8_periph{
-		voltd-name = "v1v8_periph";
-		regulator-name = "v1v8_periph";
+		reg = <VOLTD_SCMI_STPMIC1_LDO6>;
+		voltd-supply = <&v1v8_periph>;
 	};
 
 	scmi_v3v3_sw:voltd-v3v3_sw{
-		voltd-name = "v3v3_sw";
-		regulator-name = "v3v3_sw";
+		reg = <VOLTD_SCMI_STPMIC1_PWR_SW2>;
+		voltd-supply = <&v3v3_sw>;
 	};
 };
 
@@ -900,10 +895,6 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart4_pins_a>;
 	status = "okay";
-};
-
-&wakeup_pin_1{
-	bias-pull-up;
 };
 
 &wakeup_pin_5{
