--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157d-dk1-mx-fw-config.dts
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157d-dk1-mx-fw-config.dts
@@ -1,6 +1,6 @@
-/* SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause) */
+// SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) STMicroelectronics 2022 - All Rights Reserved
+ * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
